# hospitalSystem

./: .gitignore  README.md  main.py  pyproject.toml
docs/: business_rules.md  improved_business_rules.md  rn_analysis.md
src/dev/domain/entities/: admin.py  audit_log.py  base.py  doctor.py  exam.py  image.py  patient.py  report.py  user.py  workstation.py
src/dev/domain/enum/: examStatus.py  exam_status.py  gender.py  images.py  modality.py  report_status.py  user.py  userRole.py  workstation.py  workstationType.py  workstation_type.py
src/dev/domain/exceptions/: base.py  exam.py  patient.py  report.py  user.py  workstation.py
src/dev/domain/policies/: __init__.py  image_acquisition_policy.py  visualization_policy.py  workstation_access_policy.py
src/dev/domain/ports/: persistence.py  security.py  storage.py
src/dev/domain/services/: audit_logger.py  exam_creator.py  report_amendment.py  report_signer.py  user.py  user_authenticator.py  user_profile_updater.py  workstation_authorizer.py  workstation_creator.py  workstation_updater.py
src/dev/domain/value_objects/: base.py  doctor.py  exam.py  imageFiles.py  log.py  user.py  (+4 more)
tests/domain/policies/: test_image_acquisition_policy.py  test_visualization_policy.py  test_workstation_access_policy.py
tests/domain/services/: test_audit_logger.py  test_exam_creator.py  test_report_amendment.py  test_report_signer.py  test_user_authenticator.py  test_user_creator.py  test_user_password_changer.py  test_user_profile_updater.py  test_workstation_authorizer.py  test_workstation_creator.py  test_workstation_updater.py
(+72 files in other folders)
